--- a/src/sass/modules/_menu.scss
+++ b/src/sass/modules/_menu.scss
@@ -2,14 +2,13 @@
   &--hidden {
     top: -72vh;
     position: relative;
-}
+  }
   margin: auto;
 }
 
 .menu {
   z-index: 100;
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-flow: column;
   width: 300px;
@@ -19,9 +18,10 @@
   background-color: rgba(255, 255, 255, 0.514);
   backdrop-filter: blur(5px);
   box-shadow: 5px 5px 25px #797979;
-  &__toggle{
+  overflow: auto;
+  &__toggle {
     margin-top: auto;
-    &:hover{
+    &:hover {
       cursor: pointer;
     }
   }
@@ -31,26 +31,42 @@
     text-align: center;
     background-color: bisque;
     color: rgb(87, 87, 87);
-    }
-    &__btn:hover {
-      background-color: rgb(246, 216, 176);
-      cursor: pointer;
-    }
-    .h1 {
-      margin-top: 15px;
-      font-size: 24px;
-      font-weight: 400;
-    }
-    .block {
-      margin: 15px 0;
-    }
-    .input-field {
-      margin-left: 10px;
-      width: 50px;
-    }
+    margin: 0px auto;
+  }
+  &__btn:hover {
+    background-color: rgb(246, 216, 176);
+    cursor: pointer;
+  }
+  .h1 {
+    margin-top: 15px;
+    font-size: 24px;
+    font-weight: 400;
+  }
+  .row {
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .block {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-flow: column;
+    width: 80%;
+    margin: 15px 0;
+  }
+  .input-field {
+    margin-left: 10px;
+    width: 35px;
+  }
+  .col-1-2 {
+    width:50%;
+  }
 }
 
-input[type=range] {
+input[type="range"] {
   -webkit-appearance: none; /* Hides the slider so that custom slider can be made */
   width: 100%; /* Specific width is required for Firefox. */
   margin: 10px 0px;
@@ -59,24 +75,24 @@ input[type=range] {
   box-shadow: inset 2px 2px rgb(168, 143, 113);
 }
 
-input[type=range]::-webkit-slider-thumb {
+input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
 }
 
-input[type=range]:focus {
+input[type="range"]:focus {
   outline: none; /* Removes the blue border. You should probably do some kind of focus styling for accessibility reasons though. */
 }
 
-input[type=range]::-ms-track {
+input[type="range"]::-ms-track {
   width: 100%;
   cursor: pointer;
   /* Hides the slider so custom styles can be added */
-  background: transparent; 
-  border-color: transparent;  
+  background: transparent;
+  border-color: transparent;
   color: transparent;
 }
 
-input[type=range]::-webkit-slider-thumb {
+input[type="range"]::-webkit-slider-thumb {
   -webkit-appearance: none;
   border: 1px solid #000000;
   height: 24px;
@@ -89,7 +105,7 @@ input[type=range]::-webkit-slider-thumb {
 }
 
 /* All the same stuff for Firefox */
-input[type=range]::-moz-range-thumb {
+input[type="range"]::-moz-range-thumb {
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
   border: 1px solid #000000;
   height: 36px;
@@ -100,7 +116,7 @@ input[type=range]::-moz-range-thumb {
 }
 
 /* All the same stuff for IE */
-input[type=range]::-ms-thumb {
+input[type="range"]::-ms-thumb {
   box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
   border: 1px solid #000000;
   height: 36px;
