feat: add nice scrollbar

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -2,6 +2,7 @@
 @use './modules/menu';
 @use './modules/header';
 @use './modules/fonts';
+@use './modules/scrollbar';
 
 body {
   overflow: hidden;
